dist/LineScript-win64-20260616/tests/cases/compile_fail/bad_call_arity.lsc
main() -> i64 do
  declare x = sqrt(1, 2)
  println(x)
  return 0
end
